--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "^3.3.0",
+    "react-slick": "^0.25.2"
   },
   "scripts": {
     "start": "react-scripts start",
